--- a/MorTeam/Base.lproj/Main.storyboard
+++ b/MorTeam/Base.lproj/Main.storyboard
@@ -852,6 +852,9 @@
                                 <color key="backgroundColor" red="1" green="0.5362189798" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="17"/>
                                 <state key="normal" title="Choose Audience"/>
+                                <connections>
+                                    <action selector="chooseAudienceButtonClicked:" destination="q4h-FI-89x" eventType="touchUpInside" id="YP5-c0-vby"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Event Name" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oC2-KG-yWD">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
