--- a/MorTeam/Base.lproj/Main.storyboard
+++ b/MorTeam/Base.lproj/Main.storyboard
@@ -1020,10 +1020,107 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Your Team" id="LZe-FN-xBw"/>
+                    <connections>
+                        <segue destination="GCS-tC-Omf" kind="show" id="Kae-4n-giP"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bkw-L2-yTs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="908" y="635.53223388305855"/>
+        </scene>
+        <!--GroupVC-->
+        <scene sceneID="8BK-c3-0ac">
+            <objects>
+                <viewController storyboardIdentifier="Group" id="KTl-Ye-9zW" customClass="GroupVC" customModule="MorTeam" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="he2-ut-gLQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="flP-Yv-2mD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MJ1-ks-eM8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="83" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="unH-SK-284">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="83" id="nJn-Bz-f55" customClass="UserItemCell" customModule="MorTeam" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="375" height="83"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nJn-Bz-f55" id="iqk-g3-jSU">
+                                            <frame key="frameInset" width="375" height="82"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vV9-6S-lvz">
+                                                    <frame key="frameInset" minX="8" minY="8" width="64" height="65"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="65" id="IoZ-3z-iMt"/>
+                                                        <constraint firstAttribute="width" constant="65" id="M7c-Jv-Thg"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1B-la-Ny1">
+                                                    <frame key="frameInset" minX="84" minY="31" width="283" height="21"/>
+                                                    <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="M1B-la-Ny1" firstAttribute="top" secondItem="iqk-g3-jSU" secondAttribute="topMargin" constant="23" id="5to-XW-9XI"/>
+                                                <constraint firstItem="vV9-6S-lvz" firstAttribute="top" secondItem="iqk-g3-jSU" secondAttribute="topMargin" id="E3w-GD-efP"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="vV9-6S-lvz" secondAttribute="bottom" constant="1" id="brC-tT-Fdt"/>
+                                                <constraint firstItem="vV9-6S-lvz" firstAttribute="leading" secondItem="iqk-g3-jSU" secondAttribute="leadingMargin" id="lfs-z5-UYO"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="M1B-la-Ny1" secondAttribute="bottom" constant="22" id="nlZ-aR-8LQ"/>
+                                                <constraint firstItem="M1B-la-Ny1" firstAttribute="trailing" secondItem="iqk-g3-jSU" secondAttribute="trailingMargin" id="t2p-sg-CcD"/>
+                                                <constraint firstItem="M1B-la-Ny1" firstAttribute="leading" secondItem="vV9-6S-lvz" secondAttribute="trailing" constant="12" id="us9-QE-xcR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="M1B-la-Ny1" id="9ti-HO-r8h"/>
+                                            <outlet property="profilePic" destination="vV9-6S-lvz" id="YUH-tp-3fb"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="KTl-Ye-9zW" id="9WH-CP-QpD"/>
+                                    <outlet property="delegate" destination="KTl-Ye-9zW" id="NFc-O3-VHh"/>
+                                </connections>
+                            </tableView>
+                            <searchBar contentMode="redraw" text="" placeholder="Search Users" translatesAutoresizingMaskIntoConstraints="NO" id="kCh-ST-JZx">
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="KTl-Ye-9zW" id="9Xn-Dv-05H"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kCh-ST-JZx" firstAttribute="top" secondItem="he2-ut-gLQ" secondAttribute="bottom" id="9bE-zQ-4k1"/>
+                            <constraint firstAttribute="trailing" secondItem="unH-SK-284" secondAttribute="trailing" id="KKw-b3-vrd"/>
+                            <constraint firstItem="unH-SK-284" firstAttribute="leading" secondItem="MJ1-ks-eM8" secondAttribute="leading" id="UtI-g5-Xqd"/>
+                            <constraint firstItem="flP-Yv-2mD" firstAttribute="top" secondItem="unH-SK-284" secondAttribute="bottom" id="dGX-K9-gYl"/>
+                            <constraint firstAttribute="trailing" secondItem="kCh-ST-JZx" secondAttribute="trailing" id="fkf-Qw-VMu"/>
+                            <constraint firstItem="kCh-ST-JZx" firstAttribute="leading" secondItem="MJ1-ks-eM8" secondAttribute="leading" id="j4F-AP-uYe"/>
+                            <constraint firstItem="unH-SK-284" firstAttribute="top" secondItem="kCh-ST-JZx" secondAttribute="bottom" id="xho-fP-hTF"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="hPQ-tz-nGj">
+                        <barButtonItem key="rightBarButtonItem" title="Join Group" style="done" id="KcT-rZ-S3a">
+                            <connections>
+                                <action selector="statusButtonClicked:" destination="KTl-Ye-9zW" id="Wau-GT-nSE"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="searchUsersBar" destination="kCh-ST-JZx" id="5Wu-b4-uf6"/>
+                        <outlet property="statusButton" destination="KcT-rZ-S3a" id="yHr-Tw-tUs"/>
+                        <outlet property="userTable" destination="unH-SK-284" id="TOO-fq-ccu"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ids-5S-aSp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2613.5999999999999" y="631.93403298350825"/>
         </scene>
         <!--Map-->
         <scene sceneID="ztg-ut-Vb9">
@@ -1072,13 +1169,13 @@
                                             <frame key="frameInset" width="375" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Chat Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNj-Yj-XE2">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Chat Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNj-Yj-XE2">
                                                     <frame key="frameInset" minX="76" minY="13" width="291" height="21"/>
                                                     <fontDescription key="fontDescription" name="Exo2-Regular" family="Exo 2" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Last Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4A-rs-xsh">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Last Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4A-rs-xsh">
                                                     <frame key="frameInset" minX="76" minY="42" width="268" height="25"/>
                                                     <fontDescription key="fontDescription" name="Exo2-Light" family="Exo 2" pointSize="13"/>
                                                     <color key="textColor" red="0.45171400498550357" green="0.46774737936223004" blue="0.5158475024924094" alpha="1" colorSpace="calibratedRGB"/>
@@ -1495,6 +1592,24 @@
             </objects>
             <point key="canvasLocation" x="-143.19999999999999" y="636.4317841079461"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kGT-RV-eMg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GCS-tC-Omf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="IoC-f2-M1z">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KTl-Ye-9zW" kind="relationship" relationship="rootViewController" id="Ot9-o4-RkN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WHS-T4-6mi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1781.5999999999999" y="631.93403298350825"/>
+        </scene>
     </scenes>
     <resources>
         <image name="announcements" width="30" height="30"/>
@@ -1506,7 +1621,7 @@
         <image name="present-100" width="1920" height="1080"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="b3V-ef-0Q8"/>
+        <segue reference="RMH-fh-zxt"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
